[package]
name = "imgv"
version = "0.1.0"
authors = ["Yuriy O'Donnell <yuriyo@gmail.com>"]
edition = "2018"

[profile.dev.package.'*']
opt-level = 3
debug = true

[dependencies]
winapi = { version = "0.3", features = [
    "combaseapi",
    "d3d11", 
    "d3d11sdklayers", 
    "debugapi",
    "dxgi1_2",
    "dxgi1_3",
    "errhandlingapi",
    "handleapi",
    "libloaderapi",
    "synchapi",
    "shellapi",
    "shellscalingapi",
    "windowsx", 
    "winerror", 
    "winuser",
    ]}

fxhash = "0.2"
anyhow = "1.0"
display-info = "0.4"
image = "0.24.7"
cgmath = { version="0.18", features = []}
com_ptr = "0.2.0"
profiling = { version = "1.0", features = ["profile-with-superluminal"] }
clipboard-win = "4.5.0"
widestring = "1.0"

[dependencies.windows]
version = "0.51"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
]

[build-dependencies]
winres = "0.1"
ico = "0.1.0"

[features]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
default = ["profile-with-superluminal"]
