[package]
name = "imgv"
version = "0.1.1"
authors = ["Yuriy O'Donnell <yuriyo@gmail.com>"]
edition = "2018"

[profile.dev.package.'*']
opt-level = 3
debug = true

[profile.dev]
incremental = false

[dependencies]
winapi = { version = "0.3.9", features = [
    "combaseapi",
    "consoleapi",
    "d3d11", 
    "d3d11sdklayers", 
    "debugapi",
    "dxgi1_2",
    "dxgi1_3",
    "errhandlingapi",
    "handleapi",
    "libloaderapi",
    "processenv",
    "synchapi",
    "shellapi",
    "shellscalingapi",
    "wincon",
    "windowsx", 
    "winerror", 
    "winuser",
    ]}

anyhow = "1.0.100"
display-info = "0.5.7"
env_logger = "0.11.6"
image = "0.25.9"
cgmath = { version="0.18", features = []}
com_ptr = "0.2.1"
log = "0.4.26"
profiling = { version = "1.0.17", features = ["profile-with-superluminal"] }
clipboard-win = "5.4.1"
widestring = "1.2.1"

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
]

[build-dependencies]
winres = "0.1.12"
ico = "0.5.0"

[features]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
default = ["profile-with-superluminal"]
